Prepared connection to API, response test results are printed in Logcat "logs".

--- a/app/src/main/res/navigation/navigation_file.xml
+++ b/app/src/main/res/navigation/navigation_file.xml
@@ -9,5 +9,14 @@
         android:id="@+id/welcomeFragment"
         android:name="com.example.currency_tracker.View.WelcomeFragment"
         android:label="fragment_welcome"
-        tools:layout="@layout/fragment_welcome" />
+        tools:layout="@layout/fragment_welcome" >
+        <action
+            android:id="@+id/action_welcomeFragment_to_converterFragment"
+            app:destination="@id/converterFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/converterFragment"
+        android:name="com.example.currency_tracker.View.ConverterFragment"
+        android:label="fragment_converter"
+        tools:layout="@layout/fragment_converter" />
 </navigation>
