--- a/app/src/main/res/navigation/navigation_file.xml
+++ b/app/src/main/res/navigation/navigation_file.xml
@@ -18,5 +18,14 @@
         android:id="@+id/converterFragment"
         android:name="com.example.currency_tracker.View.ConverterFragment"
         android:label="fragment_converter"
-        tools:layout="@layout/fragment_converter" />
+        tools:layout="@layout/fragment_converter" >
+        <action
+            android:id="@+id/action_converterFragment_to_plotFragment"
+            app:destination="@id/plotFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/plotFragment"
+        android:name="com.example.currency_tracker.PlotFragment"
+        android:label="fragment_plot"
+        tools:layout="@layout/fragment_plot" />
 </navigation>
