--- a/app/src/main/res/layout/new_fragment_converter.xml
+++ b/app/src/main/res/layout/new_fragment_converter.xml
@@ -7,123 +7,128 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/new_converter_baseTextView"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/new_converter_chartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tvBaseCurrency_string"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/new_converter_baseSpinner"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/first_guidline" />
-
-    <TextView
-        android:id="@+id/new_converter_symbolTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tvSymbolCurrency_string"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/new_converter_symbolSpinner"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/new_converter_baseSpinner"
-        app:layout_constraintTop_toTopOf="@+id/first_guidline" />
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:contentDescription="@string/chartbutton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_show_chart_24"
+        android:focusable="true" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/first_guidline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.20" />
+        app:layout_constraintGuide_percent="0.20930232" />
 
     <Spinner
         android:id="@+id/new_converter_baseSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="88dp"
         android:entries="@array/available_currencies"
-        app:layout_constraintEnd_toStartOf="@+id/new_converter_symbolTextView"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/new_converter_baseTextView"
+        app:layout_constraintEnd_toStartOf="@+id/new_converter_convertButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/first_guidline" />
 
     <Spinner
         android:id="@+id/new_converter_symbolSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="103dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="40dp"
         android:entries="@array/available_currencies"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/new_converter_symbolTextView"
+        app:layout_constraintStart_toEndOf="@+id/new_converter_convertButton"
         app:layout_constraintTop_toTopOf="@+id/first_guidline" />
 
-    <ImageButton
-        android:id="@+id/new_converter_revertButton"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/username_text_input_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toTopOf="@+id/first_guidline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_baseline_repeat_24" />
-
-    <ImageButton
-        android:id="@+id/new_converter_plotButton"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/second_guideline"
-        app:srcCompat="@drawable/ic_baseline_show_chart_24" />
-
-    <EditText
-        android:id="@+id/new_converter_baseEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="3"
-        android:inputType="numberDecimal"
-        android:text="@string/_1"
-        android:textSize="24sp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="92dp"
         app:layout_constraintBottom_toTopOf="@+id/second_guideline"
-        app:layout_constraintEnd_toStartOf="@+id/new_converter_arrowImageView"
-        app:layout_constraintHorizontal_bias="0.238"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/first_guidline"
-        app:layout_constraintVertical_bias="0.966"
-        android:importantForAutofill="no" />
+        app:layout_constraintEnd_toStartOf="@+id/new_converter_convertButton"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <EditText
+            android:id="@+id/new_converter_baseEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="3"
+            android:hint="@string/base"
+            android:importantForAutofill="no"
+            android:inputType="numberDecimal"
+            android:textSize="24sp"
+
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <EditText
         android:id="@+id/new_converter_symbolEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="92dp"
         android:ems="3"
+        android:hint="@string/symbol"
+        android:importantForAutofill="no"
         android:inputType="numberDecimal"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/second_guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.761"
-        app:layout_constraintStart_toEndOf="@+id/new_converter_arrowImageView"
-        app:layout_constraintTop_toTopOf="@+id/first_guidline"
-        app:layout_constraintVertical_bias="1.0"
-        android:importantForAutofill="no" />
+        app:layout_constraintStart_toEndOf="@+id/new_converter_convertButton" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/second_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4" />
+        app:layout_constraintGuide_percent="0.8" />
 
-    <ImageView
-        android:id="@+id/new_converter_arrowImageView"
-        android:layout_width="69dp"
-        android:layout_height="30dp"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/new_converter_convertButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contentDescription="@string/convertbutton"
         app:layout_constraintBottom_toTopOf="@+id/second_guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/first_guidline"
-        app:layout_constraintVertical_bias="0.526"
         app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
-        android:contentDescription="@string/todo" />
+        android:focusable="true" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/new_converter_chartImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/first_guidline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_stacked_line_chart_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/new_converter_favoriteButton"
+        app:srcCompat="@drawable/ic_baseline_thumb_up_24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/favourite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/second_guideline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
