--- a/app/src/main/res/layout/new_fragment_welcome.xml
+++ b/app/src/main/res/layout/new_fragment_welcome.xml
@@ -5,7 +5,7 @@
     android:id="@+id/new_welcome_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.MainActivity">
+    tools:context=".View.MainActivity.MainActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
