--- a/app/src/main/res/navigation/navigation_file.xml
+++ b/app/src/main/res/navigation/navigation_file.xml
@@ -8,12 +8,12 @@
     <fragment
         android:id="@+id/welcomeFragment"
         android:name="com.example.currency_tracker.View.WelcomeFragment"
-        android:label="fragment_welcome"
+        android:label="Welcome"
         tools:layout="@layout/fragment_welcome" />
     <fragment
         android:id="@+id/new_converterFragment"
         android:name="com.example.currency_tracker.View.Converter.ConverterFragment"
-        android:label="fragment_converter"
+        android:label="Convert"
         tools:layout="@layout/new_fragment_converter" >
 
         <action
@@ -37,7 +37,7 @@
     <fragment
         android:id="@+id/newWelcomeFragment"
         android:name="com.example.currency_tracker.View.NewWelcomeFragment"
-        android:label="new_fragment_welcome"
+        android:label="Currency Converter"
         tools:layout="@layout/new_fragment_welcome" >
         <action
             android:id="@+id/action_newWelcomeFragment_to_new_converterFragment"
