--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    >
+    android:layout_height="55dp">
 
     <TextView
         android:id="@+id/favorite_row_baseTextView"
@@ -14,56 +11,55 @@
         android:text="@string/bse"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolTextView"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/favorite_row_flagBaseImage"
+        app:layout_constraintStart_toEndOf="@+id/favorite_row_baseImage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/favorite_row_symbolTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sbl"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolFlagImage"
+        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolImage"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/favorite_row_baseTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/favorite_row_flagBaseImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/favorite_row_baseImage"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/favorite_row_baseTextView"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_outlined_flag_24"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />
 
     <ImageView
-        android:id="@+id/favorite_row_symbolFlagImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/favorite_row_symbolImage"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/favorite_row_symbolTextView"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_outlined_flag_24"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />
 
     <ImageView
         android:id="@+id/favorite_row_arrowImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/favorite_row_symbolTextView"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/favorite_row_baseTextView"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
