Added lottie animations

--- a/app/src/main/res/layout/new_fragment_converter.xml
+++ b/app/src/main/res/layout/new_fragment_converter.xml
@@ -120,9 +120,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_stacked_line_chart_24" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/new_converter_favoriteButton"
-        app:srcCompat="@drawable/ic_baseline_thumb_up_24"
+        app:lottie_rawRes="@raw/like"
+        app:lottie_autoPlay="false"
+        app:lottie_loop="false"
+        app:lottie_speed="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
