--- a/app/src/main/res/layout/new_fragment_converter.xml
+++ b/app/src/main/res/layout/new_fragment_converter.xml
@@ -33,7 +33,7 @@
         android:layout_height="51dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="88dp"
-        android:entries="@array/available_currencies"
+        android:entries="@array/supported_currencies"
         app:layout_constraintEnd_toStartOf="@+id/new_converter_convertButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/first_guidline" />
@@ -44,39 +44,32 @@
         android:layout_height="50dp"
         android:layout_marginTop="88dp"
         android:layout_marginEnd="40dp"
-        android:entries="@array/available_currencies"
+        android:entries="@array/supported_currencies"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/new_converter_convertButton"
         app:layout_constraintTop_toTopOf="@+id/first_guidline" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/username_text_input_layout"
+    <EditText
+        android:id="@+id/new_converter_baseEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
         android:layout_marginBottom="92dp"
+        android:ems="3"
+        android:hint="@string/base"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/second_guideline"
         app:layout_constraintEnd_toStartOf="@+id/new_converter_convertButton"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <EditText
-            android:id="@+id/new_converter_baseEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="3"
-            android:hint="@string/base"
-            android:importantForAutofill="no"
-            android:inputType="numberDecimal"
-            android:textSize="24sp"
-
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintHorizontal_bias="0.681"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/new_converter_symbolEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="92dp"
         android:ems="3"
         android:hint="@string/symbol"
@@ -85,6 +78,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/second_guideline"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toEndOf="@+id/new_converter_convertButton" />
 
     <androidx.constraintlayout.widget.Guideline
