Default navigate action to converter

--- a/app/src/main/res/navigation/navigation_file.xml
+++ b/app/src/main/res/navigation/navigation_file.xml
@@ -37,5 +37,14 @@
         <action
             android:id="@+id/action_newWelcomeFragment_to_new_converterFragment"
             app:destination="@id/new_converterFragment" />
+        <action
+            android:id="@+id/action_newWelcomeFragment_to_new_converterFragment2"
+            app:destination="@id/new_converterFragment" />
+        <action
+            android:id="@+id/action_newWelcomeFragment_to_new_converterFragment3"
+            app:destination="@id/new_converterFragment" />
+        <action
+            android:id="@+id/action_newWelcomeFragment_to_new_converterFragment4"
+            app:destination="@id/new_converterFragment" />
     </fragment>
 </navigation>
